# claude-hackathon26

./: .dockerignore  .gitignore  CONTEXT.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
deploy/: Caddyfile  entrypoint.sh  landing.html
docs/: GAME-SDK.md
engine/: Cargo.toml
engine/.cargo/: config.toml
fps/: package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
games/dance/server/: Cargo.toml
games/dance/server/src/: main.rs
games/fps-boxing/server/: Cargo.toml
games/fps-boxing/server/src/: main.rs
ml/: README.md  requirements.txt
mobile/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
overlay/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
scripts/: boxing.sh  collect_from_logs.py  dance.sh  dev.sh  fps-boxing.sh  gen_protocol.py  regen-protocol.mjs  regen-protocol.sh  tunnel.sh
server/: broadcast.py  commentator.py  damage.py  game_loop.py  hit_detection.py  input_delay.py  main.py  pose.py  protocol.py  qr.py  requirements.txt  rooms.py
shared/: protocol.ts  protocol.unions.ts.tmpl
(+277 files in other folders)
